Modify issues requests